@@ -40,9 +40,15 @@ function recipe_page.update(int_name, gui_data, player_data)
     "[/font]"
   }
 
-  info_list_box.update(obj_data.ingredients, "material", refs.recipe.ingredients, player_data, true, 1)
-  info_list_box.update(obj_data.products, "material", refs.recipe.products, player_data, true)
-  info_list_box.update(obj_data.made_in, "crafter", refs.recipe.made_in, player_data, nil, nil, int_name)
+  info_list_box.update(
+    obj_data.ingredients,
+    "material",
+    refs.recipe.ingredients,
+    player_data,
+    {always_show = true, starting_index = 1}
+  )
+  info_list_box.update(obj_data.products, "material", refs.recipe.products, player_data, {always_show = true})
+  info_list_box.update(obj_data.made_in, "crafter", refs.recipe.made_in, player_data, {blueprint_recipe = int_name})
   info_list_box.update(obj_data.unlocked_by, "technology", refs.recipe.unlocked_by, player_data)
 end
 
